<resources>
    <string name="app_name">宋小菜</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_item_detail">商品详情</string>
    <string name="item_detail_image">商品详情图</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_help_common">help_common</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_order_detail">OrderDetail</string>
    <string name="title_activity_do_order">下单</string>
    <string name="title_create_pickup_info">添加提货信息</string>
    <string name="title_edit_pickup_info">编辑提货信息</string>

    <!-- user center String -->
    <string name="myInfo">个人信息</string>
    <string name="pickupInfoManage">提货信息管理</string>
    <string name="resetPwd">修改密码</string>
    <string name="help">使用帮助</string>
    <string name="feedback">反馈建议</string>
    <string name="contact">联系客服</string>
    <string name="grade">给个五星好评呗</string>
    <string name="checkUpdate">检查更新</string>
    <string name="about">关于宋小菜</string>
    <string name="exit">退出登录</string>

    <!-- user info String -->
    <string name="myinfo_name">姓名</string>
    <string name="myinfo_zone">地区</string>
    <string name="myinfo_phone">手机号</string>
    <string name="save">保存</string>
    <string name="myinfo_bind_phone">绑定手机号</string>
    <string name="myinfo_change_phone">更换手机号</string>
    <string name="myinfo_check_code">填写验证码</string>
    <string name="next">下一步</string>
    <string name="check_code_des">我们已发送验证码短信到这个号码</string>
    <string name="submit">提交</string>
    <string name="resend_code">重新发送验证码</string>
    <string name="title_activity_pickup_info">提货信息</string>
    <string name="edit_phone">填写手机号</string>
    <string name="reset_pwd">修改密码</string>
    <string name="send_code">获取验证码</string>
    <string name="title_activity_login">登 录</string>
    <string name="check_location">定位中...</string>
    <string name="title_activity_edit_pickup_info">EditPickupInfoActivity</string>

</resources>
