<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.sxc.natasha.ui.HelpCommonActivity" >

    <com.sxc.natasha.view.CustomerScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_gray">

            <LinearLayout
                android:id="@+id/first_chunk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:background="@color/white">

                <RelativeLayout
                    android:id="@+id/name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="25dp"
                        android:textSize="16sp"
                        android:text="@string/myinfo_name" />

                    <ImageView
                        android:id="@+id/goUpdateName"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        android:src="@drawable/createorder_05" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/goUpdateName"
                        android:layout_marginRight="25dp"
                        android:textSize="14sp"
                        android:textColor="@color/gray" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/devide_line"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/second_chunk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_below="@id/first_chunk" >

                <RelativeLayout
                    android:id="@+id/zone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="25dp"
                        android:textSize="16sp"
                        android:text="@string/myinfo_zone" />

                    <ImageView
                        android:id="@+id/goUpdateZone"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        android:src="@drawable/createorder_05" />

                    <TextView
                        android:id="@+id/zone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/goUpdateZone"
                        android:layout_marginRight="25dp"
                        android:textSize="14sp"
                        android:textColor="@color/gray"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/devide_line"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/third_chunk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_below="@id/second_chunk">

                <RelativeLayout
                    android:id="@+id/phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="25dp"
                        android:textSize="16sp"
                        android:text="@string/myinfo_phone" />

                    <ImageView
                        android:id="@+id/goUpdatePhone"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        android:src="@drawable/createorder_05" />

                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/goUpdatePhone"
                        android:layout_marginRight="25dp"
                        android:textSize="14sp"
                        android:textColor="@color/gray" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/devide_line"/>

            </LinearLayout>


        </RelativeLayout>

    </com.sxc.natasha.view.CustomerScrollView>

</RelativeLayout>